# chimera-agentic-infra

./: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
.mcp/: README.md  servers.json
research/: DAY1_SUBMISSION_REPORT.md  architecture_strategy.md  design_decisions.md  research_notes.md  tooling_strategy.md
skills/: __init__.py
skills/evaluate_content/: README.md  __init__.py
skills/fetch_trends/: README.md  __init__.py
skills/generate_content/: README.md  __init__.py
specs/: _meta.md  frontend.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
