[project]
name = "chimera-agentic-infra"
version = "0.1.0"
description = "Infrastructure foundation for Project Chimera - Autonomous Influencer Network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.1",
    "weaviate-client>=4.0",
    "redis>=5.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
